# atom_practice

./: .env.dist  .gitignore  README.md  base.py  config.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml  serializers.py
apps/: __init__.py  car_manufacturer_app.py  car_model_app.py
db/: db.py  models.py  repositories.py
services/: car_manufacturer_service.py  car_model_service.py
src/: base.py  config.py  exceptions.py  serializers.py
src/apps/: __init__.py  car_app.py  car_dbc_app.py  car_manufacturer_app.py  car_model_app.py  car_usage_app.py
src/db/: models.py  repositories.py
src/services/: __init__.py  can_data_j1939_reader_service.py  car_manufacturer_service.py  car_model_service.py  car_price_service.py  car_service.py  car_usage_service.py
src/views/: __init__.py  car_manufacturer_view.py  car_model_view.py  car_usage_view.py  car_view.py
views/: car_manufacturer_view.py  car_model_view.py  error_view.py
