[tool.poetry]
name = "atom2"
version = "0.1.0"
description = ""
authors = ["ilyaskalimullinn <ilyaskalimullinn@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
